--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 fluent-elements change log
 
+r3:
+    add fl-button (<button is="fl-button")
 r2:
     add <fl-navigationview>
         add <fl-navigationview-li>
